--- a/configs/config.json
+++ b/configs/config.json
@@ -1,10 +1,11 @@
 {
     "server_ip": "127.0.0.1",
-    "server_port": 12345,
+    "server_port": 8000,
     "api_key": "your_api_key_here",
 
-    "device_id": "PhotoneoTL_DEV_farme_box2",
+    "device_id_test": "PhotoneoTL_DEV_farme_box2, PhotoneoTL_DEV_IDV-087",
+    "device_id": "PhotoneoTL_DEV_farme_box",
     "cam_working_distance": 880.0,
     "debug_mode": true,
-    "model_path": "../model/best.pt"
+    "model_path": "../model/mother_of_best.pt"
 }
