[MOD] fix fpt upload

--- a/configs/config.json
+++ b/configs/config.json
@@ -1,13 +1,15 @@
 {
+    "server_ip1": "192.168.1.33",
     "server_ip": "127.0.0.1",
     "server_port": 8002,
 
     "ftp_server": "127.0.0.1",
     "ftp_user": "thh",
-    "ftp_pass": "thh@10",
+    "ftp_pass": "gachick@10",
 
 
     "device_id1": "PhotoneoTL_DEV_IDV-087",
+    "device_id2": "PhotoneoTL_DEV_InstalledExamples-color-example",
     "device_id": "PhotoneoTL_DEV_farme_box",
     
     "trigger": "Software",
