--- a/configs/config.json
+++ b/configs/config.json
@@ -1,6 +1,6 @@
 {
-    "server_ip": "192.168.1.142",
-    "server_ip1": "127.0.0.1",
+    "server_ip1": "192.168.1.142",
+    "server_ip": "127.0.0.1",
     "server_port": 8002,
 
     "ftp_server": "127.0.0.1",
@@ -10,9 +10,9 @@
     
 
 
-    "device_id": "PhotoneoTL_DEV_IDV-087",
+    "device_id1": "PhotoneoTL_DEV_IDV-087",
     "device_id2": "PhotoneoTL_DEV_InstalledExamples-color-example",
-    "device_id3": "PhotoneoTL_DEV_farme_box",
+    "device_id": "PhotoneoTL_DEV_farme_box",
     
     "trigger": "Software",
     "trigger1": "Freerun",
