[MOD] reconnect server

--- a/configs/config.json
+++ b/configs/config.json
@@ -10,9 +10,9 @@
     
 
 
-    "device_id1": "PhotoneoTL_DEV_IDV-087",
+    "device_id": "PhotoneoTL_DEV_IDV-087",
     "device_id2": "PhotoneoTL_DEV_InstalledExamples-color-example",
-    "device_id": "PhotoneoTL_DEV_farme_box",
+    "device_id3": "PhotoneoTL_DEV_farme_box",
     
     "trigger": "Software",
     "trigger1": "Freerun",
@@ -21,8 +21,8 @@
     "cam_working_distance": 990.0,
     "debug_mode": true,
 
-    "model_path1": "../model/mother_of_best.pt",
-    "model_path": "../model/best21.pt",
+    "model_path": "../model/mother_of_best.pt",
+    "model_path1": "../model/best21.pt",
     "label_path": "configs/label.yaml",
     "saved": false,
     "score": 0.3,
